Removed options no longer valid for jdk11