@@ -23,27 +23,13 @@
 
 # Expert: If you want finer control over memory options, specify them directly
 # Comment out SOLR_HEAP if you are using this though, that takes precedence
-SOLR_JAVA_MEM="-d64 -Xmx${SOLR_MEMORY_MX:-1024m} -Xms${SOLR_MEMORY_MS:-1024m}"
+SOLR_JAVA_MEM="-Xmx${SOLR_MEMORY_MX:-1024m} -Xms${SOLR_MEMORY_MS:-1024m}"
 
 # Enable verbose GC logging
-GC_LOG_OPTS=${GC_LOG_OPTS:-"-verbose:gc -XX:+PrintHeapAtGC -XX:+PrintGCDetails \
--XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime"}
+GC_LOG_OPTS=${GC_LOG_OPTS:-"-verbose:gc"}
 
 # These GC settings have shown to work well for a number of common Solr workloads
-GC_TUNE=${GC_TUNE:-"-XX:NewRatio=3 \
--XX:SurvivorRatio=4 \
--XX:TargetSurvivorRatio=90 \
--XX:MaxTenuringThreshold=8 \
--XX:+UseConcMarkSweepGC \
--XX:+UseParNewGC \
--XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 \
--XX:+CMSScavengeBeforeRemark \
--XX:PretenureSizeThreshold=64m \
--XX:+UseCMSInitiatingOccupancyOnly \
--XX:CMSInitiatingOccupancyFraction=50 \
--XX:CMSMaxAbortablePrecleanTime=6000 \
--XX:+CMSParallelRemarkEnabled \
--XX:+ParallelRefProcEnabled"}
+GC_TUNE=${GC_TUNE:-""}
 
 # Set the ZooKeeper connection string if using an external ZooKeeper ensemble
 # e.g. host1:2181,host2:2181/chroot
